[package]
name = "time_range"
version = "0.0.1-alpha.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1"


[dev-dependencies]
anyhow = "1"
pretty_assertions = "*"
test-log = { version = "*", features = ["log", "trace"] }
tracing = { version = "*", features = ["log", "attributes"] }
tracing-subscriber = { version = "*", features = ["env-filter"] }

[features]
default = []
serde = ["dep:serde"]
