[package]
name = "time_range"
version = "0.0.3-alpha.0"
edition = "2021"
description = "TimeRange and DateRange types for Chrono"
homepage = "https://github.com/la-mar/time_range"
documentation = "https://docs.rs/time_range/"
repository = "https://github.com/la-mar/time_range"
keywords = ["date", "time"]
categories = ["date-and-time"]
readme = "README.md"
license = "MIT"
include = ["src/**/*", "LICENSE-*", "README.md"]


[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1"


[dev-dependencies]
anyhow = "1"
pretty_assertions = "1"
test-log = { version = "0.2", features = ["log", "trace"] }
tracing = { version = "0.1", features = ["log", "attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
serde = ["dep:serde"]
